# apifuse

./: .gitignore  CLAUDE.md  README.md  gsd-file-manifest.json  main.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEWS.md  01-UAT.md  01-VALIDATION.md
app/core/: config.py  exceptions.py  logging.py
docs/: architecture.md  plan.md
tests/: conftest.py  test_app.py  test_config.py  test_logging.py
